--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Expense Tracker",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon index.js"
+    "start": "nodemon ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "author": "Daniel Suazo",
   "license": "ISC",
