--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Expense Tracker",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js",
+    "start": "node ./src/index.js",
     "dev": "nodemon ./src/index.js"
   },
   "author": "Daniel Suazo",
